--- a/index.html
+++ b/index.html
@@ -12,70 +12,7 @@
 <body>
   <div class="desktop">
     <div class="div">
-      <div class="overlap">
-        <img class="img" src="img/img-02-1.png" />
-        <div class="group">
-          <div class="overlap-group">
-            <div class="text-wrapper">Play video</div>
-            <img class="vector" src="img/vector-3-3.png" />
-          </div>
-        </div>
-        <div class="overlap-wrapper">
-          <div class="div-wrapper">
-            <div class="text-wrapper-2">Tools</div>
-          </div>
-        </div>
-      </div>
-      <div class="overlap-2">
-        <p class="p">Brilliant solutions for your ideas</p>
-        <div class="text-wrapper-3">Modern looking websites.</div>
-        <div class="text-wrapper-4">Account</div>
-        <div class="text-wrapper-5">Profile</div>
-        <p class="odoo-attempts-to">
-          Odoo attempts to bring the best development<br />experience to designers and developers by offering<br />the
-          tools needed for having a quick and solid start in<br />most web projects.
-        </p>
-        <div class="text-wrapper-6">Services</div>
-        <div class="text-wrapper-7">Community</div>
-        <div class="text-wrapper-8">Settings</div>
-        <div class="text-wrapper-9">Pricing</div>
-        <div class="text-wrapper-10">Help center</div>
-        <div class="text-wrapper-11">Billing</div>
-        <div class="text-wrapper-12">Contact</div>
-        <div class="text-wrapper-13">Support</div>
-        <div class="text-wrapper-14">Terms</div>
-        <div class="text-wrapper-15">Privacy</div>
-        <div class="text-wrapper-16">Cookies</div>
-        <div class="text-wrapper-17">Notifications</div>
-        <div class="text-wrapper-18">Carrers</div>
-        <div class="text-wrapper-19">About</div>
-        <div class="text-wrapper-20">Company</div>
-        <div class="btn-purchasenow">
-          <div class="overlap-3">
-            <div class="text-wrapper-21">Purchase now</div>
-          </div>
-        </div>
-        <div class="btn-documentation">
-          <div class="overlap-4">
-            <div class="text-wrapper-22">Documentation</div>
-            <div class="vector-wrapper"><img class="vector-2" src="img/vector-5-1.png" /></div>
-          </div>
-        </div>
-        <img class="vector-3" src="img/vector-7-1.png" />
-        <img class="vector-4" src="img/vector-8-1.png" />
-        <img class="odoo-white" src="img/odoo-white-4.png" />
-        <img class="dribble" src="img/dribble.png" />
-        <p class="odoo-all-rights">
-          <span class="span">© </span>
-          <span class="text-wrapper-23">Odoo</span>
-          <span class="span">. All rights reserved</span>
-        </p>
-        <img class="vector-5" src="img/vector-8.png" />
-        <img class="instagram" src="img/instagram.png" />
-        <img class="facebook" src="img/facebook.png" />
-      </div>
-      <img class="odoo-white-2" src="img/odoo-white-2.png" />
-      <img class="odoo-white-3" src="img/odoo-white-3.png" />
+      <!--Aquí está la primera sección-->
       <div class="development-done">Development<br />done right</div>
       <img class="vector-6" src="img/vector-2-1.png" />
       <div class="overlap-group-wrapper">
@@ -118,41 +55,27 @@
       <img class="google-white" src="img/google-white-1.png" />
       <img class="spotify-white" src="img/spotify-white-1.png" />
       <img class="airbnb-white" src="img/airbnb-white-1.png" />
-      <div class="text-wrapper-36">Helpful answers</div>
-      <p class="text-wrapper-37">Start building fast, beautiful and modern looking websites in no time.</p>
-      <div class="overlap-7">
-        <p class="text-wrapper-38">I want to start a new project.</p>
-        <div class="group-5">
-          <div class="overlap-8">
-            <img class="vector-8" src="img/vector-9.png" />
-            <div class="text-wrapper-39">Buy now</div>
+
+
+
+
+      <!--Aquí va la sección de Tools-->
+      <div class="overlap">
+        <img class="img" src="img/img-02-1.png" />
+        <div class="group">
+          <div class="overlap-group">
+            <div class="text-wrapper">Play video</div>
+            <img class="vector" src="img/vector-3-3.png" />
           </div>
         </div>
-        <div class="text-wrapper-40">Learn more</div>
-        <div class="rectangle-2"></div>
-      </div>
-      <div class="element-faq">
-        <div class="overlap-9">
-          <div class="despliegue">
-            <div class="group-6">
-              <div class="text-wrapper-41">+</div>
-              <div class="text-wrapper-42"></div>
-            </div>
+        <div class="overlap-wrapper">
+          <div class="div-wrapper">
+            <div class="text-wrapper-2">Tools</div>
           </div>
-          <p class="text-wrapper-43">How do I get access to my database?</p>
         </div>
       </div>
-      <div class="element-2">
-        <div class="overlap-9">
-          <div class="despliegue">
-            <div class="group-6">
-              <div class="text-wrapper-41">+</div>
-              <div class="text-wrapper-42"></div>
-            </div>
-          </div>
-          <p class="text-wrapper-43">How do I get access to my database?</p>
-        </div>
-      </div>
+
+      <!--Aquí están la sección de Features-->
       <div class="overlap-10">
         <div class="text-wrapper-44">Perfect for modern startups</div>
         <p class="text-wrapper-45">
@@ -175,6 +98,8 @@
             <div class="text-wrapper-47">Features</div>
           </div>
         </div>
+
+      <!--Aquí inicia la sección de descargar la app-->
       </div>
       <p class="text-wrapper-48">
         Get components and examples, including tons of variables that will help you grow your business.
@@ -199,6 +124,41 @@
       <div class="text-wrapper-49">Download, install and run.</div>
       <img class="image" src="img/image-1.png" />
       <img class="image-2" src="img/image-2.png" />
+
+      <!--Aquí inicia la sección de los videos/iconos enormes-->
+      <div class="group-18">
+        <div class="overlap-19">
+          <div class="text-wrapper-56">Play video</div>
+          <img class="vector" src="img/vector-3.png" />
+        </div>
+      </div>
+      <div class="group-19">
+        <p class="set-up-the-color">Set up the <br />color palette</p>
+        <img class="round-triangle-chain" src="img/round-triangle-chain.png" />
+      </div>
+      <div class="group-20">
+        <div class="overlap-19">
+          <div class="text-wrapper-56">Play video</div>
+          <img class="vector" src="img/vector-3.png" />
+        </div>
+      </div>
+      <div class="group-21">
+        <div class="wireframe-and">Wireframe and <br />prototype</div>
+        <img class="ring" src="img/ring.png" />
+      </div>
+      <div class="group-22">
+        <div class="overlap-19">
+          <div class="text-wrapper-56">Play video</div>
+          <img class="vector" src="img/vector-3.png" />
+        </div>
+      </div>
+      <div class="group-23">
+        <div class="create-the-new-logo">Create the <br />new logo</div>
+        <img class="cube" src="img/cube.png" />
+      </div>
+
+
+      <!--Aquí inicia la sección de Technology-->
       <div class="overlap-14">
         <img class="person" src="img/person-03-1.png" />
         <div class="group-11">
@@ -230,6 +190,8 @@
           </div>
         </div>
       </div>
+
+      <!--Esto es el cuadro azul-->
       <div class="group-15">
         <div class="group-16">
           <div class="overlap-18">
@@ -245,6 +207,33 @@
             </p>
             <div class="text-wrapper-55">Infinite solutions</div>
           </div>
+        </div>
+      </div>
+
+      <!--Aquí hay faqs-->
+      <div class="text-wrapper-36">Helpful answers</div>
+      <p class="text-wrapper-37">Start building fast, beautiful and modern looking websites in no time.</p>
+
+      <div class="element-faq">
+        <div class="overlap-9">
+          <div class="despliegue">
+            <div class="group-6">
+              <div class="text-wrapper-41">+</div>
+              <div class="text-wrapper-42"></div>
+            </div>
+          </div>
+          <p class="text-wrapper-43">How do I get access to my database?</p>
+        </div>
+      </div>
+      <div class="element-2">
+        <div class="overlap-9">
+          <div class="despliegue">
+            <div class="group-6">
+              <div class="text-wrapper-41">+</div>
+              <div class="text-wrapper-42"></div>
+            </div>
+          </div>
+          <p class="text-wrapper-43">How do I get access to my database?</p>
         </div>
       </div>
       <div class="despliegue-2">
@@ -271,36 +260,10 @@
           <p class="text-wrapper-42">Which license do I need?</p>
         </div>
       </div>
-      <div class="group-18">
-        <div class="overlap-19">
-          <div class="text-wrapper-56">Play video</div>
-          <img class="vector" src="img/vector-3.png" />
-        </div>
-      </div>
-      <div class="group-19">
-        <p class="set-up-the-color">Set up the <br />color palette</p>
-        <img class="round-triangle-chain" src="img/round-triangle-chain.png" />
-      </div>
-      <div class="group-20">
-        <div class="overlap-19">
-          <div class="text-wrapper-56">Play video</div>
-          <img class="vector" src="img/vector-3.png" />
-        </div>
-      </div>
-      <div class="group-21">
-        <div class="wireframe-and">Wireframe and <br />prototype</div>
-        <img class="ring" src="img/ring.png" />
-      </div>
-      <div class="group-22">
-        <div class="overlap-19">
-          <div class="text-wrapper-56">Play video</div>
-          <img class="vector" src="img/vector-3.png" />
-        </div>
-      </div>
-      <div class="group-23">
-        <div class="create-the-new-logo">Create the <br />new logo</div>
-        <img class="cube" src="img/cube.png" />
-      </div>
+
+      
+
+      <!--Aquí inicia la sección de Awards-->
       <p class="text-wrapper-57">Awards for design, creativity and innovation on the Internet</p>
       <div class="overlap-20">
         <img class="creative-idea" src="img/creative-idea-1.png" />
@@ -326,41 +289,40 @@
         </div>
       </div>
 
-
       <div class="state">
         <a href="https://www.airbnb.mx/">
-        <img class="airbnb-white-2" src="img/airbnb-white-3.png" />
-        <div class="overlap-22">
-          <div class="text-wrapper-59">from 23 reviews</div>
-          <p class="text-wrapper-60">4.95 out of 5 stars</p>
-        </div>
-        <img class="group-26" src="img/group-42-1.png"/>
-      </a>
+          <img class="airbnb-white-2" src="img/airbnb-white-3.png" />
+          <div class="overlap-22">
+            <div class="text-wrapper-59">from 23 reviews</div>
+            <p class="text-wrapper-60">4.95 out of 5 stars</p>
+          </div>
+          <img class="group-26" src="img/group-42-1.png" />
+        </a>
       </div>
 
 
       <div class="component-3">
-        <img class="slack-logo" src="img/slack-logo-1-1.png" />
-        <p class="they-build-modern-3">They build modern<br />looking websites easily<br />using Trello.</p>
-        <div class="group-27">
-          <div class="text-wrapper-58">Learn more</div>
-          <img class="vector-14" src="img/vector-4-3.png" />
-        </div>
+        <a href="https://slack.com/intl/es-mx">
+          <img class="slack-logo" src="img/slack-logo-1-1.png" />
+          <p class="they-build-modern-3">They build modern<br />looking websites easily<br />using Trello.</p>
+          <div class="group-27">
+            <span class="text-wrapper-58">Learn more</span>
+          </div>
+        </a>
       </div>
 
-
-
-
-
-      
       <div class="component-4">
-        <div class="overlap-23">
-          <div class="text-wrapper-61">from 23 reviews</div>
-          <p class="text-wrapper-60">4.95 out of 5 stars</p>
-        </div>
-        <img class="group-28" src="img/group-42-1.png" />
-        <img class="spotify-white-2" src="img/spotify-white-2-1.png" />
+        <a href="https://www.spotify.com/mx/premium/">
+          <img class="spotify-white-2" src="img/spotify-white-2-1.png" />
+          <div class="overlap-23">
+            <div class="text-wrapper-61">from 23 reviews</div>
+            <p class="text-wrapper-60">4.95 out of 5 stars</p>
+          </div>
+          <img class="group-28" src="img/group-42-1.png" />
+        </a>
       </div>
+
+      <!--Aquí inicia el menú-->
       <div class="rectangle-5"></div>
       <img class="odoo-white-4" src="img/odoo-white-1.png" />
       <div class="text-wrapper-62">Home</div>
@@ -370,12 +332,79 @@
       <div class="text-wrapper-66">Docs</div>
       <div class="text-wrapper-67">Sign in</div>
       <img class="vector-15" src="img/vector-1.png" />
+
       <div class="buy-now">
         <div class="group-29">
           <div class="text-wrapper-68">Buy now</div>
           <img class="group-30" src="img/group-1.png" />
         </div>
       </div>
+
+      <!--Cuadro antes del footer-->
+      <div class="overlap-7">
+        <p class="text-wrapper-38">I want to start a new project.</p>
+        <div class="group-5">
+          <div class="overlap-8">
+            <img class="vector-8" src="img/vector-9.png" alt="Vector image">
+            <div class="text-wrapper-39">Buy now</div>
+          </div>
+        </div>
+        <div class="text-wrapper-40">Learn more</div>
+        <div class="rectangle-2"></div>
+      </div>
+
+      <!--Footer-->
+      <footer>
+        <div class="overlap-2">
+          <p class="p">Brilliant solutions for your ideas</p>
+          <div class="text-wrapper-3">Modern looking websites.</div>
+          <div class="text-wrapper-4">Account</div>
+          <div class="text-wrapper-5">Profile</div>
+          <p class="odoo-attempts-to">
+            Odoo attempts to bring the best development<br />experience to designers and developers by offering<br />the
+            tools needed for having a quick and solid start in<br />most web projects.
+          </p>
+          <div class="text-wrapper-6">Services</div>
+          <div class="text-wrapper-7">Community</div>
+          <div class="text-wrapper-8">Settings</div>
+          <div class="text-wrapper-9">Pricing</div>
+          <div class="text-wrapper-10">Help center</div>
+          <div class="text-wrapper-11">Billing</div>
+          <div class="text-wrapper-12">Contact</div>
+          <div class="text-wrapper-13">Support</div>
+          <div class="text-wrapper-14">Terms</div>
+          <div class="text-wrapper-15">Privacy</div>
+          <div class="text-wrapper-16">Cookies</div>
+          <div class="text-wrapper-17">Notifications</div>
+          <div class="text-wrapper-18">Carrers</div>
+          <div class="text-wrapper-19">About</div>
+          <div class="text-wrapper-20">Company</div>
+          <div class="btn-purchasenow">
+            <div class="overlap-3">
+              <div class="text-wrapper-21">Purchase now</div>
+            </div>
+          </div>
+          <div class="btn-documentation">
+            <div class="overlap-4">
+              <div class="text-wrapper-22">Documentation</div>
+              <div class="vector-wrapper"><img class="vector-2" src="img/vector-5-1.png" /></div>
+            </div>
+          </div>
+          <img class="vector-3" src="img/vector-7-1.png" />
+          <img class="vector-4" src="img/vector-8-1.png" />
+          <img class="odoo-white" src="img/odoo-white-4.png" />
+          <img class="dribble" src="img/dribble.png" />
+          <p class="odoo-all-rights">
+            <span class="span">© </span>
+            <span class="text-wrapper-23">Odoo</span>
+            <span class="span">. All rights reserved</span>
+          </p>
+          <img class="vector-5" src="img/vector-8.png" />
+          <img class="instagram" src="img/instagram.png" />
+          <img class="facebook" src="img/facebook.png" />
+        </div>
+      </footer>
+      <!--Fin footer-->
     </div>
   </div>
 </body>
