--- a/index.html
+++ b/index.html
@@ -56,9 +56,6 @@
       <img class="spotify-white" src="img/spotify-white-1.png" />
       <img class="airbnb-white" src="img/airbnb-white-1.png" />
 
-
-
-
       <!--Aquí va la sección de Tools-->
       <div class="overlap">
         <img class="img" src="img/img-02-1.png" />
@@ -99,7 +96,7 @@
           </div>
         </div>
 
-      <!--Aquí inicia la sección de descargar la app-->
+        <!--Aquí inicia la sección de descargar la app-->
       </div>
       <p class="text-wrapper-48">
         Get components and examples, including tons of variables that will help you grow your business.
@@ -261,21 +258,24 @@
         </div>
       </div>
 
-      
+
 
       <!--Aquí inicia la sección de Awards-->
       <p class="text-wrapper-57">Awards for design, creativity and innovation on the Internet</p>
+
       <div class="overlap-20">
         <img class="creative-idea" src="img/creative-idea-1.png" />
         <div class="component">
-          <p class="they-build-modern">They build modern<br />looking websites easily<br />using Tabs.</p>
-          <div class="group-24">
-            <div class="text-wrapper-58">Learn more</div>
-            <img class="vector-14" src="img/vector-4-3.png" />
-          </div>
-          <img class="image-3" src="img/image-4-1.png" />
+          <a href="https://www.amazon.com.mx/">
+            <img class="image-3" src="img/image-4-1.png" />
+            <p class="they-build-modern">They build modern<br />looking websites easily<br />using Tabs.</p>
+            <div class="group-24">
+              <div class="text-wrapper-58">Learn more</div>
+            </div>
+          </a>
         </div>
       </div>
+
       <div class="overlap-21">
         <img class="creative-idea-2" src="img/creative-idea.png" />
         <div class="component-2">
