prueba_odoo_mobile_done

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         <div class="text-wrapper-65">App</div>
         <div class="text-wrapper-66">Docs</div>
         <div class="text-wrapper-67">Sign in</div>
-        <img class="vector-15" src="img/vector-1.png"/>
+        <img class="vector-15" src="img/vector-1.png" />
         <div class="buy-now">
           <div class="group-29">
             <div class="text-wrapper-68">Buy now</div>
@@ -490,37 +490,64 @@
     </div>
 
     <div class="mobile-content">
-      
-      <div class="mobile-styles">
-        <img class="odoo-white-4" src="img/odoo-white-1.png" />
-      </div>
-      <!--Aquí inicia el menú hamburguesa-->
-      <!-- Botón de hamburguesa -->
-      <div class="hamburger-icon" onclick="toggleNav()">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-      </div>
-      <div class="main-content">
-        <div class="hamburger-menu">
-          <br>
-          <div class="menu-item">Home</div>
-          <div class="menu-item">Products</div>
-          <div class="menu-item">Pages</div>
-          <div class="menu-item">App</div>
-          <div class="menu-item">Docs</div>
-          <div class="menu-item">Sign in</div>
-          <div class="menu-item">Buy Now</div>
+      <div class="div-m">
+        <!--Aquí está la primera sección-->
+        <div class="centrar-contenido">
+          <div class="content-container">
+            <img class="content" src="img/content_mobile.png" alt="Contenido Móvil">
+
+            <!--Aquí van los awards-->
+            <a href="https://www.amazon.com.mx/">
+              <img class="content amazon-img" src="img/A_AMAZON.png" alt="Amazon">
+            </a>
+
+            <a href="https://www.airbnb.mx/">
+              <img class="content airbnb-img" src="img/A_AIRBNB.png" alt="Airbnb">
+            </a>
+
+            <a href="https://slack.com/intl/es-mx">
+              <img class="content slack-img" src="img/A_SLACK.png" alt="Slack">
+            </a>
+
+            <a href="https://www.spotify.com/mx/premium/">
+              <img class="content spotify-img" src="img/A_SPOTIFY.png" alt="Spotify">
+            </a>
+
+            <a href="https://www.paypal.com/mx/home">
+              <img class="content paypal-img" src="img/A_PAYPAL.png" alt="Paypal">
+            </a>
+          </div>
+        </div>
+
+        <img class="odoo-white-4" src="img/odoo-white-1.png">
+        
+        <!--Faqs-->
+        <div class="text-wrapper-36-m">Helpful answers</div>
+        <p class="text-wrapper-37-m">Start building fast, beautiful and modern looking websites in no time.</p>
+
+
+
+        <!--Aquí inicia el menú hamburguesa-->
+        <!-- Botón de hamburguesa -->
+        <div class="hamburger-icon" onclick="toggleNav()">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+        <div class="main-content">
+          <div class="hamburger-menu">
+            <br>
+            <div class="menu-item">Home</div>
+            <div class="menu-item">Products</div>
+            <div class="menu-item">Pages</div>
+            <div class="menu-item">App</div>
+            <div class="menu-item">Docs</div>
+            <div class="menu-item">Sign in</div>
+            <div class="menu-item">Buy Now</div>
+          </div>
         </div>
       </div>
-      <div class="primera_Seccion">
-        <img src="img/mobile/Primer_imagen.png" alt="Desktop Image">
-
-      </div>
-
-
     </div>
-  </div>
 </body>
 
 </html>
