prueba_odoo_mobile_done

--- a/index.html
+++ b/index.html
@@ -520,12 +520,35 @@
         </div>
 
         <img class="odoo-white-4" src="img/odoo-white-1.png">
-        
+        <br>
         <!--Faqs-->
         <div class="text-wrapper-36-m">Helpful answers</div>
+        <br>
         <p class="text-wrapper-37-m">Start building fast, beautiful and modern looking websites in no time.</p>
+<br>
 
 
+        <div class="faqs" onclick="toggleDropdownm(this)">
+          <div class="group-6m">
+            <div class="text-wrapper-41m">+</div>
+            <div class="text-wrapper-42m">
+              <p class="toggle-textm">How do I get access to my database?</p>
+            </div>
+          </div>
+          <div class="dropdown-contentm">
+            <br>
+            <p>
+              First log into the Odoo account from this
+              <a href="https://www.odoo.com/web/login" target="_blank">link</a>:
+            </p>
+            <p>
+              After successfully logging into the account, you can see your name in the Top
+              Right of the screen. Click on it, there you can see a menu in the dropdown named My Databases.
+              Click on it, and there you can see the databases.
+            </p>
+            <br>
+          </div>
+        </div>
 
         <!--Aquí inicia el menú hamburguesa-->
         <!-- Botón de hamburguesa -->
